# cgreeter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: tests.yml
include/: client.hpp  flow_mgr.hpp  native_byte_order.hpp  request.hpp  response.hpp  types.hpp
lib/: CMakeLists.txt  response.cpp
lib/client/: CMakeLists.txt  client.cpp  flow_mgr.cpp
lib/greeterd_ipc/: CMakeLists.txt  native_byte_order.cpp  response.cpp
src/: CMakeLists.txt  flow_mgr.cpp  main.cpp  native_byte_order.cpp  request.cpp  response.cpp
tests/: CMakeLists.txt  test_client.cpp  test_flow_mgr.cpp  test_native_byte_order.cpp  test_request.cpp  test_response.cpp
